@@ -55,8 +55,7 @@ $args = @(
     "--username", "Player",
     "--versionType", "release",
     "--accessToken", "0",
-    "--userType", "legacy",
-    "--enable-native-access=ALL-UNNAMED"
+    "--userType", "legacy"
 )
 
 java -cp $classpathString net.minecraft.client.main.Main $args
